update_final_code
Update and working checking in subscriotion.

--- a/main.html
+++ b/main.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Reschedule Shutdown</title>
+<title>Reschdule VM - Shutdown</title>
+<link rel = "icon" href = "https://www.novartis.com/sites/all/themes/novartis/favicons/favicon-16x16.png" sizes="16x16"
+		type = "image/png">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -103,8 +105,8 @@ footer {
 .button3 {background-color: rebeccapurple;} /* Purple */
 .button4 {background-color: brown;} /* Purple */
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+/*<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+/*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 
 
@@ -116,31 +118,39 @@ footer {
   }
 }
 </style>
-
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
 </head>
 <body>
 
-<header> <h><strong>Reschedule the VM Shutdown</strong></h> </header>
+<header> <h2><strong>Reschedule shutdown for VM-<script type="text/javascript"> 
+    { var url = window.location.href;
+      var id = window.location.toString().split('?')[1]
+      var mname=id.split("=")[1]
+      }
+      localStorage.setItem("mname", mname)
+  document.write(mname) </script> </strong></h2> </header>
 <script>
 function callWebHook(noOfMin) {
-    var sysdata = {"NoOfMins":noOfMin,"MachineName":"GLNLMS-TP97500100"}
+    var url = window.location.href;
+    var id = window.location.toString().split('?')[1]
+    var mname=id.split("=")[1]    
+    var sysdata = {"NoOfMins":noOfMin,"MachineName":mcname}
     localStorage.setItem("time", noOfMin)
     $.ajax( {
-            url: "https://3d7bb960-2d57-47ec-ba5f-d3bc5a31a533.webhook.we.azure-automation.net/webhooks?token=yst%2fDe835KuREAV%2f9EoVea4iQb89FDMMMVMmcgffUhs%3d",
+            //url: "https://3d7bb960-2d57-47ec-ba5f-d3bc5a31a533.webhook.we.azure-automation.net/webhooks?token=yst%2fDe835KuREAV%2f9EoVea4iQb89FDMMMVMmcgffUhs%3d",
+            url: "https://fb2df518-f62a-4aca-8f58-a9022248c279.webhook.cid.azure-automation.net/webhooks?token=kBJf3jF3%2fql1Vh%2f0qM30t2hX2XYqrpoEUWpSFuGaWnQ%3d",
             crossDomain: true,
             type: "POST",
             data: sysdata,
             header: {contentType: "application/json; charset=utf-8"},
             error: function(rtn,status,error){
                 //alert("#ERR: rtn.status=" + rtn.status + ", rtn.statusText=" + rtn.statusText + "\nstatus=" + status + ", error=" + error );
-                window.location.href= "./rescheduled.html";
+                window.location.href= "./Thankyou.html";
             },
             success: function(rawres, status){
                 //alert("Success!\nstatus=" + status);
-                window.location.href= "./rescheduled.html";
+                window.location.href= "./Thankyou.html";
         }
     });
 }
@@ -151,7 +161,6 @@ function callWebHook(noOfMin) {
       <li><a><strong>Pick the Time </strong></a></li>
     </ul>
   </nav>
-  
   <article>
           <br>
           <br>
