Update and rename rescheduled.html to Thankyou.html

--- a/Thankyou.html
+++ b/Thankyou.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Thank you</title>
+    <link rel = "icon" href = "https://www.novartis.com/sites/all/themes/novartis/favicons/favicon-16x16.png" sizes="16x16"
+		type = "image/png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
@@ -93,7 +95,7 @@ footer {
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
-<header> <h4><strong>Your system shutdown rescheduled for <script type="text/javascript"> var time= localStorage.getItem("time")
+<header> <h4><strong>The system shutdown rescheduled for <script type="text/javascript"> var time= localStorage.getItem("time")
     var str_time;
     if (time == 0){
         str_time = "today"
@@ -108,6 +110,5 @@ document.write(str_time) </script> </strong></h4> </header>
 <footer>
     <p>TAD Formula One Azure Operation</p>
 </footer>
-
 </body>
 </html>
